# sifirai

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  main.cxx
sai-docs/: STRUCTURE.md
sai-libs/: CMakeLists.txt
sai-libs/sai-core/: CMakeLists.txt
sai-libs/sai-core/src/: core.ixx
src/: main.cpp
src/tensor/: CMakeLists.txt  tensor.ixx
